feat: update security configuration