@@ -1,7 +1,7 @@
 package dev.aries.iijra.config;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.stream.Collectors;
 
 import lombok.NonNull;
@@ -15,8 +15,7 @@ import org.springframework.security.oauth2.server.resource.authentication.JwtAut
 import org.springframework.stereotype.Component;
 
 @Component
-public class JwtAuthConverter implements Converter<Jwt, AbstractAuthenticationToken> {
-
+public class JwtConverter implements Converter<Jwt, AbstractAuthenticationToken> {
 	@Override
 	public AbstractAuthenticationToken convert(@NonNull Jwt jwt) {
 		Collection<GrantedAuthority> authorities = extractAuthorities(jwt);
@@ -24,12 +23,11 @@ public class JwtAuthConverter implements Converter<Jwt, AbstractAuthenticationTo
 	}
 
 	private Collection<GrantedAuthority> extractAuthorities(Jwt jwt) {
-		Collection<String> roles = jwt.getClaim("roles");
-		if (roles == null || roles.isEmpty()) {
-			return Collections.emptyList();
-		}
-		return roles.stream()
-				.map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-				.collect(Collectors.toList());
+		Collection<String> roles = jwt.getClaimAsStringList("roles");
+		return roles != null ?
+				roles.stream()
+						.map(role -> new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()))
+						.collect(Collectors.toList()) :
+				List.of();
 	}
 }
